--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
