--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -19,3 +19,5 @@ flasgger==0.9.5
 waitress==1.4.3
 Flask-SQLAlchemy==2.4.1
 git+https://github.com/jwag956/flask-security#egg=Flask-Security-too
+openfoodfacts==0.1.1
+barcodenumber==0.5.0
