--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "ean13-lib": "^0.0.5",
     "fork-awesome": "^1.1.7",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
