--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,8 @@
      "vetur.format.defaultFormatter.html": "js-beautify-html",
     "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
     "python.pythonPath": "/home/dashie/dev/omnomnomnom/venv/bin/python",
-    "restructuredtext.confPath": "${workspaceFolder}/docs"
+    "restructuredtext.confPath": "${workspaceFolder}/docs",
+    "python.linting.flake8Args": [
+      "--config=api/setup.cfg"
+    ]
 }
