--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "ean13-lib": "^0.0.5",
     "fork-awesome": "^1.1.7",
+    "moment": "^2.27.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "vue": "^2.6.11",
