--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "sass-loader": "^9.0.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
+    "vue-quaggajs": "^1.0.12",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.4.0",
