--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -21,3 +21,4 @@ Flask-SQLAlchemy==2.4.1
 git+https://github.com/jwag956/flask-security#egg=Flask-Security-too
 openfoodfacts==0.1.1
 barcodenumber==0.5.0
+Flask_Babelex==0.9.4
