--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "vue-i18n": "^8.17.3",
     "vue-quaggajs": "^1.0.12",
     "vue-router": "^3.2.0",
+    "vue-slick-carousel": "^1.0.6",
     "vuelidate": "^0.7.5",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.1.0"
